[gd_scene load_steps=4 format=3 uid="uid://b71a1ul30k024"]

[ext_resource type="Script" path="res://Code/Player.gd" id="1_gnq2y"]
[ext_resource type="PackedScene" uid="uid://b8p7mluckqna5" path="res://3DRenders/GalagaShip.glb" id="1_yrjqr"]

[sub_resource type="BoxShape3D" id="BoxShape3D_sxi2t"]
size = Vector3(39.9442, 5.99162, 34.1193)

[node name="CharacterBody3D" type="CharacterBody3D"]
collision_mask = 16
platform_floor_layers = 17
platform_wall_layers = 17
script = ExtResource("1_gnq2y")
dash_speed = 300

[node name="GalagaShip" parent="." instance=ExtResource("1_yrjqr")]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 1.89297, 8.39233e-05, 0.0118397)
shape = SubResource("BoxShape3D_sxi2t")

[node name="FireHole1" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.493, 0, -1.595)

[node name="FireHole2" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.895924, 0, -0.789354)

[node name="FireHole3" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.895924, 0, 0.80203)

[node name="FireHole4" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.49275, 0, 1.59508)

[node name="Locator" type="Marker3D" parent="."]

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.07
one_shot = true

[node name="DashCooldown" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="DashTimer" to="." method="_dash_timeout"]
[connection signal="timeout" from="DashCooldown" to="." method="_on_dash_cooldown_timeout"]
